# dashboard-backend

./: .gitignore  README.md  pyproject.toml  railway.toml  requirements.txt
sql/: schema.sql
src/: main.py  worker.py
src/application/dto/: ingestion_schema.py
src/application/services/: dashboard_service.py  ingestion_service.py
src/domain/entities/: atendimento.py  dimensoes.py
src/infrastructure/database/: config.py  models.py
src/infrastructure/ingestion/: bulk_processor.py
src/presentation/controllers/: ingestion_controller.py
src/presentation/graphql/: queries.py  schema.py
src/shared/utils/: name_resolver.py
